update: wofi, default font and themes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,8 +24,8 @@ monitor = , preferred, auto, auto
 # ---------- Autostart ----------
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 
-exec-once = waybar & hyprpaper # Hyprland ecosystems
-exec-once = systemctl --user enable --now keyd.service # Keyd rebindings
+exec-once = waybar & hyprpaper & hyprsunset -t 5000 # Hyprland ecosystems
+exec-once = systemctl start keyd.service # Keyd rebindings
 exec-once = systemctl --user enable --now hyprpolkitagent.service # Polkit authentications
 
 
@@ -33,8 +33,30 @@ exec-once = systemctl --user enable --now hyprpolkitagent.service # Polkit authe
 # ---------- Environment Variables ----------
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+# Cursors
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,xcursor-theme
+
+# Rendering setups
+env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+
+# Ensure desktop environment is properly set
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+
+# Improve GTK and QT theme consistency
+env = GTK_THEME,Adwaita-dark
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_STYLE_OVERRIDE,Adwaita-dark
+
+# Improve window scaling & appearance
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORM,wayland;xcb
 
 
 
@@ -262,33 +284,22 @@ windowrule = noblur,.* # For some reason this actually enable the blur
 # windowrule = opacity 0.89 override 0.89 override, .* # This already being applied in inactive/active/fullscreen opacity 
 
 # Others rules imported
-windowrule = float, class:^(steam)$
+windowrulev2 = float, title:^(.*dialog.*|.*popup.*|.*error.*|.*warning.*|.*preferences.*|.*settings.*|.*properties.*)$
+
+# General Floating & Centered Windows
+windowrulev2 = float, center, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$
+
+windowrulev2 = float, class:^(steam)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 73% 72%, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrule = center, title:^(Open File)(.*)$
-windowrule = center, title:^(Select a File)(.*)$
-windowrule = center, title:^(Choose wallpaper)(.*)$
-windowrule = center, title:^(Open Folder)(.*)$
-windowrule = center, title:^(Save As)(.*)$
-windowrule = center, title:^(Library)(.*)$
-windowrule = center, title:^(File Upload)(.*)$
 
 # Picture-in-Picture
 windowrulev2 = keepaspectratio, title:^(Picture(-| )in(-| )[Pp]icture)$
+windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrulev2 = move 73% 72%,title:^(Picture(-| )in(-| )[Pp]icture)$ 
 windowrulev2 = size 25%, title:^(Picture(-| )in(-| )[Pp]icture)$
 windowrulev2 = float, title:^(Picture(-| )in(-| )[Pp]icture)$
 windowrulev2 = pin, title:^(Picture(-| )in(-| )[Pp]icture)$
-
-# Dialogs
-windowrule=float,title:^(Open File)(.*)$
-windowrule=float,title:^(Select a File)(.*)$
-windowrule=float,title:^(Choose wallpaper)(.*)$
-windowrule=float,title:^(Open Folder)(.*)$
-windowrule=float,title:^(Save As)(.*)$
-windowrule=float,title:^(Library)(.*)$
-windowrule=float,title:^(File Upload)(.*)$
 
 # Tearing
 # windowrule=immediate,.*\.exe
