--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,2 +1,5 @@
 [Settings]
+gtk-theme-name=Adwaita-dark
+gtk-icon-theme-name=Papirus-Dark
+gtk-font-name=Ubuntu 11
 gtk-cursor-theme-name=xcursor_theme
