update: keywords and dolphin window rules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,16 +11,6 @@ monitor = , preferred, auto, auto
 
 
 
-# ---------- Keywords ----------
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
-# $terminal = kitty
-# $fileManager = dolphin
-# $menu = wofi --show drun
-
-
-
 # ---------- Autostart ----------
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 
@@ -65,16 +55,17 @@ env = QT_QPA_PLATFORM,wayland;xcb
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 4
-    gaps_out = 5
-    gaps_workspaces = 0
-    border_size = 1
+    gaps_in = 3 # Between windows (per-window)
+    gaps_out = 6 # To actual screen (per-workspace)
+    gaps_workspaces = 0 # Does nothing, visible more spaces for animation
+    # Border size and color corresponding
+    border_size = 0
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     # col.inactive_border = rgba(595959aa)
     col.active_border = rgba(0DB7D4FF)
     col.inactive_border = rgba(31313600)
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    # Misc settings for windows
+    resize_on_border = false # Set to true enable resizing windows by clicking and dragging on borders and gaps 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
     layout = dwindle
@@ -82,7 +73,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 20
+    rounding = 10
     # https://wiki.hyprland.org/Configuring/Variables/#blur 
     blur {
         enabled = true
@@ -198,30 +189,43 @@ gestures {
 
 # https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs
 device {
-    name = epic-mouse-v1
+    name = default_mouse 
     sensitivity = -0.5
 }
+
+
+
+# ---------- Keywords ----------
+# See https://wiki.hyprland.org/Configuring/Keywords/
+
+# Set programs that you use
+$terminal = kitty
+$app_launcher = wofi --show run
+$file_manager = dolphin
+$browser = firefox
+# Screenshots are copied to clipboard and not saved to system
+$screenshot_fullscreen = grim - | wl-copy # Screenshot fullscreen
+$screenshot_selection = grim -g "$(slurp -w 0)" - | wl-copy # Screenshot selection
 
 
 
 # ---------- Keybindings ----------
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
 # Hyprland Actions
-bind = $mainMod, backspace, exit # Exit Hyprland
-bind = $mainMod, C, killactive # Close current window
-bind = $mainMod, S, togglefloating # Toggle between tiling and floating window
-bind = $mainMod, A, fullscreen # Open the window in fullscreen
+bind = SUPER, backspace, exec, uwsm stop # Exit hyprland-uwsm
+# bind = SUPER, backspace, exit # Exit hyprland
+bind = SUPER, C, killactive # Close current window 
+bind = SUPER, S, togglefloating # Toggle between tiling and floating window
+bind = SUPER, A, fullscreen # Open the window in fullscreen
 # Application
-bind = $mainMod, R, exec, wofi --show run # Open app-launcher
-bind = $mainMod, Q, exec, kitty # Open terminal
-bind = $mainMod, O, exec, kitty # Open terminal
-bind = $mainMod, E, exec, dolphin # Opens the filemanager
-bind = $mainMod, F, exec, firefox # Open the browser
-bind = $mainMod, Print, exec, grim - | wl-copy # Screenshot fullscreen
-bind = $mainMod&Shift_R, S, exec, grim -g "$(slurp -d)" - | wl-copy # Screenshot selection
+bind = SUPER, R, exec, $app_launcher # Open app-launcher
+bind = SUPER, Q, exec, $terminal # Open terminal
+bind = SUPER, O, exec, $terminal # Open terminal
+bind = SUPER, E, exec, $file_manager # Opens the filemanager
+bind = SUPER, F, exec, $browser # Open the browser
+bind = SUPER, Print, exec, $screenshot_fullscreen # Screenshot fullscreen
+bind = SUPER & Shift_R, S, exec, $screenshot_selection # Screenshot selection
 # Dwindle functions
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
@@ -237,48 +241,50 @@ bind = $mainMod&Shift_R, S, exec, grim -g "$(slurp -d)" - | wl-copy # Screenshot
 # bind = , XF86Refresh, exec, xdotool key F5
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, h, movefocus, l # Move focus left
-bind = $mainMod, l, movefocus, r # Move focus right
-bind = $mainMod, j, movefocus, u # Move focus up
-bind = $mainMod, k, movefocus, d # Move focus down
+bind = SUPER, h, movefocus, l # Move focus left
+bind = SUPER, l, movefocus, r # Move focus right
+bind = SUPER, j, movefocus, u # Move focus up
+bind = SUPER, k, movefocus, d # Move focus down
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1 # Switch to workspace 1
-bind = $mainMod, 2, workspace, 2 # Switch to workspace 2
-bind = $mainMod, 3, workspace, 3 # Switch to workspace 3
-bind = $mainMod, 4, workspace, 4 # Switch to workspace 4
-bind = $mainMod, 5, workspace, 5 # Switch to workspace 5
-bind = $mainMod, 6, workspace, 6 # Switch to workspace 6
-bind = $mainMod, 7, workspace, 7 # Switch to workspace 7
-bind = $mainMod, 8, workspace, 8 # Switch to workspace 8
-bind = $mainMod, 9, workspace, 9 # Switch to workspace 9
-bind = $mainMod, 0, workspace, 10 # Switch to workspace 10
+bind = SUPER, 1, workspace, 1 # Switch to workspace 1
+bind = SUPER, 2, workspace, 2 # Switch to workspace 2
+bind = SUPER, 3, workspace, 3 # Switch to workspace 3
+bind = SUPER, 4, workspace, 4 # Switch to workspace 4
+bind = SUPER, 5, workspace, 5 # Switch to workspace 5
+bind = SUPER, 6, workspace, 6 # Switch to workspace 6
+bind = SUPER, 7, workspace, 7 # Switch to workspace 7
+bind = SUPER, 8, workspace, 8 # Switch to workspace 8
+bind = SUPER, 9, workspace, 9 # Switch to workspace 9
+bind = SUPER, 0, workspace, 10 # Switch to workspace 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1 #  Move window to workspace 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2 #  Move window to workspace 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3 #  Move window to workspace 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4 #  Move window to workspace 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5 #  Move window to workspace 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6 #  Move window to workspace 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7 #  Move window to workspace 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8 #  Move window to workspace 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9 #  Move window to workspace 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10 #  Move window to workspace 10
+bind = SUPER SHIFT, 1, movetoworkspace, 1 #  Move window to workspace 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2 #  Move window to workspace 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3 #  Move window to workspace 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4 #  Move window to workspace 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5 #  Move window to workspace 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6 #  Move window to workspace 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7 #  Move window to workspace 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8 #  Move window to workspace 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9 #  Move window to workspace 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10 #  Move window to workspace 10
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1 # Scroll workspaces 
-bind = $mainMod, mouse_up, workspace, e-1 # Scroll workspaces
+# Scroll through existing workspaces with mainMod + scroll (Only scroll active workspaces)
+# bind = $mainMod, mouse_down, workspace, e+1 # Scroll workspaces 
+# bind = $mainMod, mouse_up, workspace, e-1 # Scroll workspaces
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow # Move window
-bindm = $mainMod, mouse:273, resizewindow # Resize window
+bindm = SUPER, mouse:272, movewindow # Move window
+bindm = SUPER, mouse:273, resizewindow # Resize window
 
 
 
 # ---------- Window and Workspace ----------
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+
+# To check windows properties use 'hyprctl clients' command
 
 windowrule = noblur,.* # For some reason this actually enable the blur
 # windowrule = opacity 0.89 override 0.89 override, .* # This already being applied in inactive/active/fullscreen opacity 
@@ -287,8 +293,18 @@ windowrule = noblur,.* # For some reason this actually enable the blur
 windowrulev2 = float, title:^(.*dialog.*|.*popup.*|.*error.*|.*warning.*|.*preferences.*|.*settings.*|.*properties.*)$
 
 # General Floating & Centered Windows
-windowrulev2 = float, center, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$
+windowrulev2 = float, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$
+windowrulev2 = size 25%, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$ 
 
+# Dolphin file manager rules
+windowrulev2 = float, title:^(Copying|Already Exists as Folder|Folder Already Exists).*$
+windowrulev2 = size 25%, title:^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists).*$
+windowrulev2 = center, title:^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists).*$
+
+windowrulev2 = noinitialfocus, title:^(Copying).*$
+windowrulev2 = stayfocused, title:^(Already Exists as Folder|Folder Already Exists).*$
+
+# Steam and Pavucontrol pop-ups
 windowrulev2 = float, class:^(steam)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 73% 72%, class:^(org.pulseaudio.pavucontrol)$
