--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -42,6 +42,7 @@
 		"3": "",
 		"4": "",
 		"5": "",
+		"urgent": "",
 		"active": "",
 		"default": ""
 	},
@@ -187,6 +188,7 @@
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
+	"scroll-step": 5,
         "format": "{icon} {volume}% {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
