update: gtk2/3/4, waybar, window blurs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,8 @@ monitor = , preferred, auto, auto
 
 exec-once = waybar & hyprpaper & hyprsunset -t 5000 # Hyprland ecosystems
 exec-once = systemctl start keyd.service # Keyd rebindings
-exec-once = systemctl --user enable --now hyprpolkitagent.service # Polkit authentications
+# exec-once = systemctl --user enable --now hyprpolkitagent.service # Polkit authentications
+exec-once = /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
 
 
 
@@ -37,9 +38,13 @@ env = CLUTTER_BACKEND,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
+env = XDG_CONFIG_HOME,$HOME/.config
 
 # Improve GTK and QT theme consistency
 env = GTK_THEME,Adwaita-dark
+env = GTK2_RC_FILES=$HOME/.gtkrc-2.0
+env = GTK3_RC_FILES,$HOME/.config/gtk-3.0/settings.ini
+env = GTK4_RC_FILES,$HOME/.config/gtk-4.0/settings.ini
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_STYLE_OVERRIDE,Adwaita-dark
 
@@ -80,7 +85,7 @@ decoration {
         xray = true
         special = false
         new_optimizations = true
-        size = 14
+        size = 2
         passes = 4
         brightness = 1
         noise = 0.01
@@ -98,7 +103,7 @@ decoration {
         color = rgba(0000002A)
     }
     # Window Opacities
-    active_opacity = 1.0
+    active_opacity = 0.92
     inactive_opacity = 0.82
     fullscreen_opacity = 1.0
     # Dim
@@ -214,7 +219,7 @@ $screenshot_selection = grim -g "$(slurp -w 0)" - | wl-copy # Screenshot selecti
 
 # Hyprland Actions
 bind = SUPER, backspace, exec, uwsm stop # Exit hyprland-uwsm
-# bind = SUPER, backspace, exit # Exit hyprland
+bind = SUPER, backspace, exit # Exit hyprland
 bind = SUPER, C, killactive # Close current window 
 bind = SUPER, S, togglefloating # Toggle between tiling and floating window
 bind = SUPER, A, fullscreen # Open the window in fullscreen
@@ -286,8 +291,8 @@ bindm = SUPER, mouse:273, resizewindow # Resize window
 
 # To check windows properties use 'hyprctl clients' command
 
-windowrule = noblur,.* # For some reason this actually enable the blur
-# windowrule = opacity 0.89 override 0.89 override, .* # This already being applied in inactive/active/fullscreen opacity 
+#windowrule = noblur,.* # For some reason this actually enable the blur
+#windowrule = opacity 0.89 override 0.89 override, .* # This already being applied in inactive/active/fullscreen opacity 
 
 # Others rules imported
 windowrulev2 = float, title:^(.*dialog.*|.*popup.*|.*error.*|.*warning.*|.*preferences.*|.*settings.*|.*properties.*)$
