--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -3,3 +3,4 @@ gtk-theme-name=Adwaita-dark
 gtk-icon-theme-name=Papirus-Dark
 gtk-font-name=Ubuntu 11
 gtk-cursor-theme-name=xcursor_theme
+gtk-application-prefer-dark-theme=1
