update: wofi, waybar, dunst, env

--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -1,12 +1,15 @@
-width=20%
-height=60%
+width=50%
+height=2%
 prompt=Search...
 normal_window=true
 location=center
+y-offset=0
 gtk-dark=true
 insensitive=true
 allow_markup=true
 no_actions=true
-orientation=vertical
+orientation=horizontal
+lines=1
 halign=fill
 content_halign=fill
+hide_scroll=true
