--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -72,7 +72,7 @@ general {
     # Misc settings for windows
     resize_on_border = false # Set to true enable resizing windows by clicking and dragging on borders and gaps 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
     layout = dwindle
 }
 
@@ -206,6 +206,7 @@ device {
 # Set programs that you use
 $terminal = kitty
 $app_launcher = wofi --show run
+# $app_launcher = bemenu-run --fn "Ubuntu 11" --hp 6 --margin 6 --border-radius 6 -H 32 --no-overlap --ch 16 --cw 4
 $file_manager = dolphin
 $browser = firefox
 # Screenshots are copied to clipboard and not saved to system
@@ -219,7 +220,7 @@ $screenshot_selection = grim -g "$(slurp -w 0)" - | wl-copy # Screenshot selecti
 
 # Hyprland Actions
 bind = SUPER, backspace, exec, uwsm stop # Exit hyprland-uwsm
-bind = SUPER, backspace, exit # Exit hyprland
+# bind = SUPER, backspace, exit # Exit hyprland
 bind = SUPER, C, killactive # Close current window 
 bind = SUPER, S, togglefloating # Toggle between tiling and floating window
 bind = SUPER, A, fullscreen # Open the window in fullscreen
@@ -301,23 +302,34 @@ windowrulev2 = float, title:^(.*dialog.*|.*popup.*|.*error.*|.*warning.*|.*prefe
 windowrulev2 = float, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$
 windowrulev2 = size 25%, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$ 
 
-# Dolphin file manager rules
+# Application launcher (wofi)
+windowrulev2 = float, class:wofi
+windowrulev2 = size 50% 0%, class:wofi
+windowrulev2 = move 25% 9%, class:wofi
+windowrulev2 = stayfocused, class:wofi
+
+# File manager (Dolphin)
 windowrulev2 = float, title:^(Copying|Already Exists as Folder|Folder Already Exists).*$
 windowrulev2 = size 25%, title:^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists).*$
-windowrulev2 = center, title:^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists).*$
+windowrulev2 = center, title:^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists|Choose Application).*$
 
 windowrulev2 = noinitialfocus, title:^(Copying).*$
-windowrulev2 = stayfocused, title:^(Already Exists as Folder|Folder Already Exists).*$
+windowrulev2 = stayfocused, title:^(Already Exists as Folder|Folder Already Exists|Choose Application).*$
 
 # Steam and Pavucontrol pop-ups
 windowrulev2 = float, class:^(steam)$
+windowrulev2 = maximize, title:Steam
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 73% 72%, class:^(org.pulseaudio.pavucontrol)$
 
-# Picture-in-Picture
+# Video player (VLC)
+windowrulev2 = float, class:^(vlc)$
+windowrulev2 = maximize, class:^(vlc)$
+
+# Picture-in-Picture (Unknown)
 windowrulev2 = keepaspectratio, title:^(Picture(-| )in(-| )[Pp]icture)$
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrulev2 = move 73% 72%,title:^(Picture(-| )in(-| )[Pp]icture)$ 
+windowrulev2 = move 73% 72%, title:^(Picture(-| )in(-| )[Pp]icture)$ 
 windowrulev2 = size 25%, title:^(Picture(-| )in(-| )[Pp]icture)$
 windowrulev2 = float, title:^(Picture(-| )in(-| )[Pp]icture)$
 windowrulev2 = pin, title:^(Picture(-| )in(-| )[Pp]icture)$
@@ -325,6 +337,7 @@ windowrulev2 = pin, title:^(Picture(-| )in(-| )[Pp]icture)$
 # Tearing
 # windowrule=immediate,.*\.exe
 # windowrulev2=immediate,class:(steam_app)
+# windowrulev2=immediate,class:(Godot)
 
 # No shadow for tiled windows
 windowrulev2 = noshadow,floating:0
