--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,31 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_QPA_PLATFORM,wayland;xcb
 
-
+# Imported environments
+# env = GDK_BACKEND,wayland,x11
+# env = SDL_VIDEODRIVER,wayland
+# env = CLUTTER_BACKEND,wayland
+# env = MOZ_ENABLE_WAYLAND,1
+# env = MOZ_DISABLE_RDD_SANDBOX,1
+# env = _JAVA_AWT_WM_NONREPARENTING=1
+# env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+# env = QT_QPA_PLATFORM,wayland
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = GBM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = WLR_NO_HARDWARE_CURSORS,1
+# env = __NV_PRIME_RENDER_OFFLOAD,1
+# env = __VK_LAYER_NV_optimus,NVIDIA_only
+# env = PROTON_ENABLE_NGX_UPDATER,1
+# env = NVD_BACKEND,direct
+# env = __GL_GSYNC_ALLOWED,1
+# env = __GL_VRR_ALLOWED,0
+# env = WLR_DRM_NO_ATOMIC,1
+# env = WLR_USE_LIBINPUT,1
+# env = XWAYLAND_NO_GLAMOR,1 # Gamescope exclusive
+# env = __GL_MaxFramesAllowed,1
+# env = WLR_RENDERER_ALLOW_SOFTWARE,1
+# env = WLR_RENDERER_DRM_BACKEND,1
 
 # ---------- Windows and Animations ----------
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
