--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -84,92 +84,92 @@ env = QT_QPA_PLATFORM,wayland;xcb
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3 # Between windows (per-window)
-    gaps_out = 6 # To actual screen (per-workspace)
-    gaps_workspaces = 0 # Does nothing, visible more spaces for animation
-    # Border size and color corresponding
-    border_size = 0
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    # col.inactive_border = rgba(595959aa)
-    col.active_border = rgba(0DB7D4FF)
-    col.inactive_border = rgba(31313600)
-    # Misc settings for windows
-    resize_on_border = false # Set to true enable resizing windows by clicking and dragging on borders and gaps 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = true
-    layout = dwindle
+	gaps_in = 3 # Between windows (per-window)
+	gaps_out = 6 # To actual screen (per-workspace)
+	gaps_workspaces = 0 # Does nothing, visible more spaces for animation
+	# Border size and color corresponding
+	border_size = 0
+	# col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+	# col.inactive_border = rgba(595959aa)
+	col.active_border = rgba(0DB7D4FF)
+	col.inactive_border = rgba(31313600)
+	# Misc settings for windows
+	resize_on_border = false # Set to true enable resizing windows by clicking and dragging on borders and gaps 
+	# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+	allow_tearing = true
+	layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    # https://wiki.hyprland.org/Configuring/Variables/#blur 
-    blur {
-        enabled = true
-        xray = true
-        special = false
-        new_optimizations = true
-        size = 2
-        passes = 4
-        brightness = 1
-        noise = 0.01
-        contrast = 1
-        popups = true
-        popups_ignorealpha = 0.6
-    }
-    # https://wiki.hyprland.org/Configuring/Variables/#shadow 
-    shadow {
-        enabled = true
-        ignore_window = true
-        range = 20
-        offset = 0 2
-        render_power = 4
-        color = rgba(0000002A)
-    }
-    # Window Opacities
-    active_opacity = 0.92
-    inactive_opacity = 0.82
-    fullscreen_opacity = 1.0
-    # Dim
-    dim_inactive = false
-    dim_strength = 0.1
-    dim_special = 0
+	rounding = 10
+	# https://wiki.hyprland.org/Configuring/Variables/#blur 
+	blur {
+		enabled = true
+		xray = true
+		special = false
+		new_optimizations = true
+		size = 2
+		passes = 4
+		brightness = 1
+		noise = 0.01
+		contrast = 1
+		popups = true
+		popups_ignorealpha = 0.6
+	}
+	# https://wiki.hyprland.org/Configuring/Variables/#shadow 
+	shadow {
+		enabled = true
+		ignore_window = true
+		range = 20
+		offset = 0 2
+		render_power = 4
+		color = rgba(0000002A)
+	}
+	# Window Opacities
+	active_opacity = 0.92
+	inactive_opacity = 0.82
+	fullscreen_opacity = 1.0
+	# Dim
+	dim_inactive = false
+	dim_strength = 0.1
+	dim_special = 0
 }
  
 # https://wiki.hyprland.org/Configuring/Animations/
 animations {
-    enabled = yes
-    # https://wiki.hyprland.org/Configuring/Variables/#animations
-    bezier = linear, 0, 0, 1, 1
-    bezier = md3_standard, 0.2, 0, 0, 1
-    bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
-    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = menu_decel, 0.1, 1, 0, 1
-    bezier = menu_accel, 0.38, 0.04, 1, 0.07
-    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
-    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
-    # Animation configs
-    animation = windows, 1, 3, md3_decel, popin 60%
-    animation = windowsIn, 1, 3, md3_decel, popin 60%
-    animation = windowsOut, 1, 3, md3_accel, popin 60%
-    animation = border, 1, 10, default
-    animation = fade, 1, 3, md3_decel
-    # animation = layers, 1, 2, md3_decel, slide
-    animation = layersIn, 1, 3, menu_decel, slide
-    animation = layersOut, 1, 1.6, menu_accel
-    animation = fadeLayersIn, 1, 2, menu_decel
-    animation = fadeLayersOut, 1, 4.5, menu_accel
-    animation = workspaces, 1, 12, menu_decel, slide
-    # animation = workspaces, 1, 2.5, softAcDecel, slide
-    # animation = workspaces, 1, 7, menu_decel, slidefade 15%
-    # animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
-    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+	enabled = yes
+	# https://wiki.hyprland.org/Configuring/Variables/#animations
+	bezier = linear, 0, 0, 1, 1
+	bezier = md3_standard, 0.2, 0, 0, 1
+	bezier = md3_decel, 0.05, 0.7, 0.1, 1
+	bezier = md3_accel, 0.3, 0, 0.8, 0.15
+	bezier = overshot, 0.05, 0.9, 0.1, 1.1
+	bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+	bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+	bezier = menu_decel, 0.1, 1, 0, 1
+	bezier = menu_accel, 0.38, 0.04, 1, 0.07
+	bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+	bezier = easeOutCirc, 0, 0.55, 0.45, 1
+	bezier = easeOutExpo, 0.16, 1, 0.3, 1
+	bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+	bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
+	# Animation configs
+	animation = windows, 1, 3, md3_decel, popin 60%
+	animation = windowsIn, 1, 3, md3_decel, popin 60%
+	animation = windowsOut, 1, 3, md3_accel, popin 60%
+	animation = border, 1, 10, default
+	animation = fade, 1, 3, md3_decel
+	# animation = layers, 1, 2, md3_decel, slide
+	animation = layersIn, 1, 3, menu_decel, slide
+	animation = layersOut, 1, 1.6, menu_accel
+	animation = fadeLayersIn, 1, 2, menu_decel
+	animation = fadeLayersOut, 1, 4.5, menu_accel
+	animation = workspaces, 1, 12, menu_decel, slide
+	# animation = workspaces, 1, 2.5, softAcDecel, slide
+	# animation = workspaces, 1, 7, menu_decel, slidefade 15%
+	# animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
+	animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
 
@@ -178,19 +178,19 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling
-    preserve_split = true # You probably want this
+	pseudotile = true # Master switch for pseudotiling
+	preserve_split = true # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+	new_status = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+	force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+	disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -199,27 +199,27 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-    follow_mouse = 1
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    touchpad {
-        natural_scroll = false
-    }
+	kb_layout = us
+	kb_variant =
+	kb_model =
+	kb_options =
+	kb_rules =
+	follow_mouse = 1
+	sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+	touchpad {
+		natural_scroll = false
+	}
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+	workspace_swipe = false
 }
 
 # https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs
 device {
-    name = default_mouse 
-    sensitivity = -0.5
+	name = default_mouse 
+	sensitivity = -0.5
 }
 
 
@@ -243,7 +243,7 @@ $screenshot_selection = grim -g "$(slurp -w 0)" - | wl-copy # Screenshot selecti
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # Hyprland Actions
-bind = SUPER, backspace, exec, uwsm stop # Exit hyprland-uwsm
+# bind = SUPER, backspace, exec, uwsm stop # Exit hyprland-uwsm
 # bind = SUPER, backspace, exit # Exit hyprland
 bind = SUPER, C, killactive # Close current window 
 bind = SUPER, S, togglefloating # Toggle between tiling and floating window
@@ -270,11 +270,24 @@ bind = SUPER & Shift_R, S, exec, $screenshot_selection # Screenshot selection
 # bind = , XF86WLAN, exec, nmcli radio wifi toggle
 # bind = , XF86Refresh, exec, xdotool key F5
 
+# Spotify keybinds (via playerctl)
+bind = SUPER, bracketleft, exec, playerctl previous --player=spotify
+bind = SUPER, bracketright, exec, playerctl next --player=spotify
+bind = SUPER, backslash, exec, playerctl play-pause --player=spotify
+# Spotify keybinds (via dbus-send script)
+# bind = SUPER, bracketleft, exec, ~/.config/hypr/spotify.sh --prev
+# bind = SUPER, bracketright, exec, ~/.config/hypr/spotify.sh --next
+# bind = SUPER, backslash, exec, ~/.config/hypr/spotify.sh --playpause
+
 # Move focus with mainMod + arrow keys
-bind = SUPER, h, movefocus, l # Move focus left
-bind = SUPER, l, movefocus, r # Move focus right
+# bind = SUPER, h, movefocus, l # Move focus left
+# bind = SUPER, l, movefocus, r # Move focus right
 bind = SUPER, j, movefocus, u # Move focus up
 bind = SUPER, k, movefocus, d # Move focus down
+
+# Switch workspaces one by one
+bindd = $mainMod, l, change active workspace forwards, workspace, r+1
+bindd = $mainMod, h, change active workspace backwards, workspace, r-1
 
 # Switch workspaces with mainMod + [0-9]
 bind = SUPER, 1, workspace, 1 # Switch to workspace 1
