update: spotify script notification

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -270,14 +270,12 @@ bind = SUPER & Shift_R, S, exec, $screenshot_selection # Screenshot selection
 # bind = , XF86WLAN, exec, nmcli radio wifi toggle
 # bind = , XF86Refresh, exec, xdotool key F5
 
-# Spotify keybinds (via playerctl)
-bind = SUPER, bracketleft, exec, playerctl previous --player=spotify
-bind = SUPER, bracketright, exec, playerctl next --player=spotify
-bind = SUPER, backslash, exec, playerctl play-pause --player=spotify
-# Spotify keybinds (via dbus-send script)
-# bind = SUPER, bracketleft, exec, ~/.config/hypr/spotify.sh --prev
-# bind = SUPER, bracketright, exec, ~/.config/hypr/spotify.sh --next
-# bind = SUPER, backslash, exec, ~/.config/hypr/spotify.sh --playpause
+# Spotify keybinds
+bind = SUPER, backslash, exec, ~/.config/hypr/spotify.sh -pp
+bind = SUPER, bracketleft, exec, ~/.config/hypr/spotify.sh -p
+bind = SUPER, bracketright, exec, ~/.config/hypr/spotify.sh -n
+bind = SUPER, equal, exec, ~/.config/hypr/spotify.sh -vu
+bind = SUPER, minus, exec, ~/.config/hypr/spotify.sh -vd
 
 # Move focus with mainMod + arrow keys
 # bind = SUPER, h, movefocus, l # Move focus left
