--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = waybar & hyprpaper & hyprsunset -t 5000 # Hyprland ecosystems
 exec-once = systemctl start keyd.service # Keyd rebindings
 # exec-once = systemctl --user enable --now hyprpolkitagent.service # Polkit authentications
 exec-once = /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
+exec-once = wayvnc --config /home/perrorovic/.config/wayvnc/config # Wayvnc access
 
 
 
