sync: hyprland, waybar, htop

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,14 +2,10 @@
 # This is Hyprland config file, refer to the wiki for more information.
 # https://wiki.hyprland.org/Configuring/
 
-
-
 # ---------- Monitors ----------
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 monitor = , preferred, auto, auto
-
-
 
 # ---------- Autostart ----------
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
@@ -19,8 +15,6 @@ exec-once = systemctl start keyd.service # Keyd rebindings
 # exec-once = systemctl --user enable --now hyprpolkitagent.service # Polkit authentications
 exec-once = /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
 exec-once = wayvnc --config /home/perrorovic/.config/wayvnc/config # Wayvnc access
-
-
 
 # ---------- Environment Variables ----------
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
@@ -54,7 +48,7 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_QPA_PLATFORM,wayland;xcb
 
-# Imported environments
+# Phiarch's environment
 # env = GDK_BACKEND,wayland,x11
 # env = SDL_VIDEODRIVER,wayland
 # env = CLUTTER_BACKEND,wayland
@@ -71,14 +65,24 @@ env = QT_QPA_PLATFORM,wayland;xcb
 # env = __VK_LAYER_NV_optimus,NVIDIA_only
 # env = PROTON_ENABLE_NGX_UPDATER,1
 # env = NVD_BACKEND,direct
-# env = __GL_GSYNC_ALLOWED,1
+# env = __GL_GSYNC_ALLOWED,0
 # env = __GL_VRR_ALLOWED,0
 # env = WLR_DRM_NO_ATOMIC,1
 # env = WLR_USE_LIBINPUT,1
-# env = XWAYLAND_NO_GLAMOR,1 # Gamescope exclusive
+# #env = XWAYLAND_NO_GLAMOR,1 # Gamescope exclusive
 # env = __GL_MaxFramesAllowed,1
 # env = WLR_RENDERER_ALLOW_SOFTWARE,1
-# env = WLR_RENDERER_DRM_BACKEND,1
+# #env = WLR_RENDERER_DRM_BACKEND,1
+
+# Force electron-based app to use native Wayland instead of XWayland
+env = NVD_BACKEND,direct
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
+# NVIDIA CUDA 12.9.1-1
+# env = PATH,/opt/cuda/bin:$PATH
+# env = LD_LIBRARY_PATH,/opt/cuda/lib64:$LD_LIBRARY_PATH
+# Optional, if needed for nvcc to use specific gcc version:
+# env = NVCC_CCBIN,/usr/bin/gcc-12
 
 # ---------- Windows and Animations ----------
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
@@ -173,8 +177,6 @@ animations {
 	animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
-
-
 # ---------- Dwindle Layouts and Miscs ----------
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -193,8 +195,6 @@ misc {
 	force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
 	disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
-
-
 
 # ---------- Input and Gestures ----------
 
@@ -223,8 +223,6 @@ device {
 	sensitivity = -0.5
 }
 
-
-
 # ---------- Keywords ----------
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
@@ -238,38 +236,26 @@ $browser = firefox
 $screenshot_fullscreen = grim - | wl-copy # Screenshot fullscreen
 $screenshot_selection = grim -g "$(slurp -w 0)" - | wl-copy # Screenshot selection
 
-
-
 # ---------- Keybindings ----------
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # Hyprland Actions
 # bind = SUPER, backspace, exec, uwsm stop # Exit hyprland-uwsm
 # bind = SUPER, backspace, exit # Exit hyprland
-bind = SUPER, C, killactive # Close current window 
+bind = SUPER, Q, killactive # Close current window 
 bind = SUPER, S, togglefloating # Toggle between tiling and floating window
 bind = SUPER, A, fullscreen # Open the window in fullscreen
 # Application
-bind = SUPER, R, exec, $app_launcher # Open app-launcher
-bind = SUPER, Q, exec, $terminal # Open terminal
 bind = SUPER, O, exec, $terminal # Open terminal
+bind = SUPER, R, exec, $app_launcher # Open app-launcher
 bind = SUPER, E, exec, $file_manager # Opens the filemanager
 bind = SUPER, F, exec, $browser # Open the browser
+# Screenshot functions
 bind = SUPER, Print, exec, $screenshot_fullscreen # Screenshot fullscreen
 bind = SUPER & Shift_R, S, exec, $screenshot_selection # Screenshot selection
 # Dwindle functions
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
-
-# Laptops functions
-# bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
-# bind = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
-# bind = , XF86MonBrightnessUp, exec, brightnessctl set 10%+
-# bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
-# bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-# bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-# bind = , XF86WLAN, exec, nmcli radio wifi toggle
-# bind = , XF86Refresh, exec, xdotool key F5
+# bind = SUPER, P, pseudo, # dwindle
+# bind = SUPER, J, togglesplit, # dwindle
 
 # Spotify keybinds
 bind = SUPER, backslash, exec, ~/.config/hypr/spotify.sh -pp
@@ -278,49 +264,47 @@ bind = SUPER, bracketright, exec, ~/.config/hypr/spotify.sh -n
 bind = SUPER, equal, exec, ~/.config/hypr/spotify.sh -vu
 bind = SUPER, minus, exec, ~/.config/hypr/spotify.sh -vd
 
-# Move focus with mainMod + arrow keys
-# bind = SUPER, h, movefocus, l # Move focus left
-# bind = SUPER, l, movefocus, r # Move focus right
-bind = SUPER, j, movefocus, u # Move focus up
-bind = SUPER, k, movefocus, d # Move focus down
+# Move focus window relative
+bind = SUPER, j, movefocus, l # Move focus left
+bind = SUPER, k, movefocus, r # Move focus right
+# bind = SUPER, j, movefocus, u # Move focus up
+# bind = SUPER, k, movefocus, d # Move focus down
 
-# Switch workspaces one by one
-bindd = $mainMod, l, change active workspace forwards, workspace, r+1
-bindd = $mainMod, h, change active workspace backwards, workspace, r-1
+# Move focus workspace relative
+bindd = SUPER, l, change active workspace forwards, workspace, r+1
+bindd = SUPER, h, change active workspace backwards, workspace, r-1
 
-# Switch workspaces with mainMod + [0-9]
-bind = SUPER, 1, workspace, 1 # Switch to workspace 1
-bind = SUPER, 2, workspace, 2 # Switch to workspace 2
-bind = SUPER, 3, workspace, 3 # Switch to workspace 3
-bind = SUPER, 4, workspace, 4 # Switch to workspace 4
-bind = SUPER, 5, workspace, 5 # Switch to workspace 5
-bind = SUPER, 6, workspace, 6 # Switch to workspace 6
-bind = SUPER, 7, workspace, 7 # Switch to workspace 7
-bind = SUPER, 8, workspace, 8 # Switch to workspace 8
-bind = SUPER, 9, workspace, 9 # Switch to workspace 9
-bind = SUPER, 0, workspace, 10 # Switch to workspace 10
+# Switch workspaces
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = SUPER SHIFT, 1, movetoworkspace, 1 #  Move window to workspace 1
-bind = SUPER SHIFT, 2, movetoworkspace, 2 #  Move window to workspace 2
-bind = SUPER SHIFT, 3, movetoworkspace, 3 #  Move window to workspace 3
-bind = SUPER SHIFT, 4, movetoworkspace, 4 #  Move window to workspace 4
-bind = SUPER SHIFT, 5, movetoworkspace, 5 #  Move window to workspace 5
-bind = SUPER SHIFT, 6, movetoworkspace, 6 #  Move window to workspace 6
-bind = SUPER SHIFT, 7, movetoworkspace, 7 #  Move window to workspace 7
-bind = SUPER SHIFT, 8, movetoworkspace, 8 #  Move window to workspace 8
-bind = SUPER SHIFT, 9, movetoworkspace, 9 #  Move window to workspace 9
-bind = SUPER SHIFT, 0, movetoworkspace, 10 #  Move window to workspace 10
+# Move active window to a workspace
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with mainMod + scroll (Only scroll active workspaces)
-# bind = $mainMod, mouse_down, workspace, e+1 # Scroll workspaces 
-# bind = $mainMod, mouse_up, workspace, e-1 # Scroll workspaces
+# Move focus to active workspaces
+# bind = SUPER, mouse_down, workspace, e+1 # Scroll workspaces 
+# bind = SUPER, mouse_up, workspace, e-1 # Scroll workspaces
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# Move/resize windows with dragging
 bindm = SUPER, mouse:272, movewindow # Move window
 bindm = SUPER, mouse:273, resizewindow # Resize window
-
-
 
 # ---------- Window and Workspace ----------
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
