update: hyprland keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -264,11 +264,11 @@ bind = SUPER, bracketright, exec, ~/.config/hypr/spotify.sh -n
 bind = SUPER, equal, exec, ~/.config/hypr/spotify.sh -vu
 bind = SUPER, minus, exec, ~/.config/hypr/spotify.sh -vd
 
-# Move focus window relative
-bind = SUPER, j, movefocus, l # Move focus left
-bind = SUPER, k, movefocus, r # Move focus right
-# bind = SUPER, j, movefocus, u # Move focus up
-# bind = SUPER, k, movefocus, d # Move focus down
+# Move focus window relative (new update no more rolling setting)
+bind = SUPER Shift, j, movefocus, l # Move focus left
+bind = SUPER Shift, k, movefocus, r # Move focus right
+bind = SUPER Shift, k, movefocus, u # Move focus up
+bind = SUPER Shift, j, movefocus, d # Move focus down
 
 # Move focus workspace relative
 bindd = SUPER, l, change active workspace forwards, workspace, r+1
