fix: windowrulev2 for hyprland 0.53.3-1

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -316,48 +316,48 @@ bindm = SUPER, mouse:273, resizewindow # Resize window
 #windowrule = opacity 0.89 override 0.89 override, .* # This already being applied in inactive/active/fullscreen opacity 
 
 # Others rules imported
-windowrulev2 = float, title:^(.*dialog.*|.*popup.*|.*error.*|.*warning.*|.*preferences.*|.*settings.*|.*properties.*)$
+windowrule = match:float true, match:title ^(.*dialog.*|.*popup.*|.*error.*|.*warning.*|.*preferences.*|.*settings.*|.*properties.*)$
 
 # General Floating & Centered Windows
-windowrulev2 = float, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$
-windowrulev2 = size 25%, title:^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$ 
+windowrule = match:float true, match:title ^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$
+windowrule = size 25%, match:title ^(Open File|Select a File|Choose wallpaper|Open Folder|Save As|Library|File Upload).*$ 
 
 # Application launcher (wofi)
-windowrulev2 = float, class:wofi
-windowrulev2 = size 50% 0%, class:wofi
-windowrulev2 = move 25% 9%, class:wofi
-windowrulev2 = stayfocused, class:wofi
+windowrule = match:float true, match:class wofi
+windowrule = size 50% 0%, match:class wofi
+windowrule = move 25% 9%, match:class wofi
+windowrule = stayfocused on, match:class wofi
 
 # File manager (Dolphin)
-windowrulev2 = float, title:^(Copying|Already Exists as Folder|Folder Already Exists).*$
-windowrulev2 = size 25%, title:^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists).*$
-windowrulev2 = center, title:^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists|Choose Application).*$
+windowrule = match:float yes, match:title ^(Copying|Already Exists as Folder|Folder Already Exists).*$
+windowrule = size 25%, match:title ^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists).*$
+windowrule = center, match:title ^(Copying|Already Exists as Folder|Folder Already Exists|File Already Exists|Choose Application).*$
 
-windowrulev2 = noinitialfocus, title:^(Copying).*$
-windowrulev2 = stayfocused, title:^(Already Exists as Folder|Folder Already Exists|Choose Application).*$
+windowrule = noinitialfocus on, match:title ^(Copying).*$
+windowrule = stayfocused on, match:title ^(Already Exists as Folder|Folder Already Exists|Choose Application).*$
 
 # Steam and Pavucontrol pop-ups
-windowrulev2 = float, class:^(steam)$
-windowrulev2 = maximize, title:Steam
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 73% 72%, class:^(org.pulseaudio.pavucontrol)$
+windowrule = match:float yes, match:class ^(steam)$
+windowrule = maximize on, match:title Steam
+windowrule = match:float yes, match:class ^(org.pulseaudio.pavucontrol)$
+windowrule = size 73% 72%, match:class ^(org.pulseaudio.pavucontrol)$
 
 # Video player (VLC)
-windowrulev2 = float, class:^(vlc)$
-windowrulev2 = maximize, class:^(vlc)$
+windowrule = match:float yes, match:class ^(vlc)$
+windowrule = maximize on, match:class ^(vlc)$
 
 # Picture-in-Picture (Unknown)
-windowrulev2 = keepaspectratio, title:^(Picture(-| )in(-| )[Pp]icture)$
-windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrulev2 = move 73% 72%, title:^(Picture(-| )in(-| )[Pp]icture)$ 
-windowrulev2 = size 25%, title:^(Picture(-| )in(-| )[Pp]icture)$
-windowrulev2 = float, title:^(Picture(-| )in(-| )[Pp]icture)$
-windowrulev2 = pin, title:^(Picture(-| )in(-| )[Pp]icture)$
+windowrule = keep_aspect_ratio on, match:title ^(Picture(-| )in(-| )[Pp]icture)$
+windowrule = match:float yes, match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrule = move 73% 72%, match:title ^(Picture(-| )in(-| )[Pp]icture)$ 
+windowrule = size 25%, match:title ^(Picture(-| )in(-| )[Pp]icture)$
+windowrule = match:float yes, match:title ^(Picture(-| )in(-| )[Pp]icture)$
+windowrule = pin on, match:title ^(Picture(-| )in(-| )[Pp]icture)$
 
-# Tearing
+# Tearing (change this into windowrule if needed since windowrulev2 is deprecated)
 # windowrule=immediate,.*\.exe
 # windowrulev2=immediate,class:(steam_app)
 # windowrulev2=immediate,class:(Godot)
 
 # No shadow for tiled windows
-windowrulev2 = noshadow,floating:0
+windowrule = noshadow on, match:float yes
