update: audio output cycle w/ pactl

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -264,6 +264,9 @@ bind = SUPER, bracketright, exec, ~/.config/hypr/spotify.sh -n
 bind = SUPER, equal, exec, ~/.config/hypr/spotify.sh -vu
 bind = SUPER, minus, exec, ~/.config/hypr/spotify.sh -vd
 
+# Audio keybinds
+bind = SUPER, backspace, exec, ~/.config/hypr/cycle-audio.sh
+
 # Move focus window relative (new update no more rolling setting)
 bind = SUPER Shift, j, movefocus, l # Move focus left
 bind = SUPER Shift, k, movefocus, r # Move focus right
